--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,3 +2,4 @@
 <text class="title">pages/home/home.wxml</text>
 <button size="mini" onclick = "doit">btn</button>
 <image src = "timg.jpg"></image>
+<text>ad</text>
